--- a/deploy/manifest-5.yaml
+++ b/deploy/manifest-5.yaml
@@ -22,6 +22,24 @@ spec:
       protocol: TCP
 ---
 apiVersion: v1
+kind: Pod
+metadata:
+  name: api-2
+  namespace: contacts
+  labels:
+    app: contacts
+spec:
+  containers:
+  - name: api-server
+    image: johnbelamaric/contacts-api
+    imagePullPolicy: Always
+    args: [ "-dsn", "api:mypassword@tcp(mysql.db:3306)/contacts?charset=utf8&parseTime=True" ]
+    ports:
+    - containerPort: 80
+      name: http
+      protocol: TCP
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: api
@@ -29,7 +47,6 @@ metadata:
   labels:
     app: contacts
 spec:
-  clusterIP: None
   selector:
     app: contacts
   ports:
