Add missing tls host section in Ingress rule

--- a/deploy/manifest-11.yaml
+++ b/deploy/manifest-11.yaml
@@ -55,6 +55,8 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   tls:
+  - hosts:
+    - minikube.local
   - secretName: minikube
   rules:
   - host: minikube.local
