--- a/deploy/manifest-11.yaml
+++ b/deploy/manifest-11.yaml
@@ -57,7 +57,7 @@ spec:
   tls:
   - hosts:
     - minikube.local
-  - secretName: minikube
+    secretName: minikube
   rules:
   - host: minikube.local
     http:
